# Log

./: CMakeLists.txt  LICENSE  README.md  log.cpp  log.h  log_object.h  test.cpp  test_lib.cpp  test_main.cpp
tests/: CMakeLists.txt
tests/shared/: lib-init.cpp  lib.cpp  lib.h  main.cpp
tests/static/: lib.cpp  lib.h  main.cpp
